code/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shahmeer.mndev.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress #this should match the service running with the wordpress name
            port:
              number: 80
